--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.2.2",
     "sass-loader": "^13.0.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
