--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.0.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.2",
+    "identify": "^0.1.5",
     "sass-loader": "^13.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.15"
